<resources>
    <string name="app_name">Face Detection</string>
    <string name="str_switch">Switch</string>
    <string name="i_m_ready">Im Ready</string>
    <string name="overView">OpenCV Library</string>
    <string name="overView_2">This project can detect face and record face for 5 second</string>
    <string name="finding_face">Finding face</string>
    <string name="str_record_finish">Record Finish</string>
    <string name="str_recording_time">Recording %s</string>
    <string name="str_delete">Delete</string>
    <string name="str_share">Share</string>
    <string name="str_play">Play</string>
    <string name="str_delete_description">Do you want to delete the video?</string>
    <string name="str_deleted">File Deleted</string>
    <string name="str_delete_failure">Delete Failure</string>
    <string name="str_file_deleted">File Deleted</string>
    <string name="str_portrait_mode_warning">Camera Can\'t find your face in Portrait Mode\nPlease change your device orientation</string>
</resources>