<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@android:color/black"
    tools:context=".view.activity.PlayerActivity">

    <VideoView
        android:id="@+id/videoView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:onClick="onClick" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/toolbox"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        android:background="@color/text_shadow">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/ibPlay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@null"
            android:drawableTop="@drawable/ic_play_circle"
            android:onClick="onClick"
            android:text="@string/str_play"
            android:textColor="@android:color/white"
            app:drawableTint="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dim_margin_top"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ibPlay">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/ibDelete"
                android:layout_width="?attr/actionBarSize"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@null"
                android:drawableTop="@drawable/ic_delete"
                android:onClick="onClick"
                android:text="@string/str_delete"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                app:drawableTint="@android:color/white" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/ibShare"
                android:layout_width="?attr/actionBarSize"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@null"
                android:drawableTop="@drawable/ic_share_24"
                android:onClick="onClick"
                android:text="@string/str_share"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                app:drawableTint="@android:color/white" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>